--- a/src/index.css
+++ b/src/index.css
@@ -66,5 +66,6 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .theme-dark{
   --background-image: url(./assets/cloudDark.png);
-  --background-color-primary: rgb(55, 65, 81)
+  --background-color-primary: rgb(55, 65, 81);
+
 }
